versions/0.8.1/_sources/refs/_aws-cdk_aws-ssm.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"Wp5kev/JM0crDuq1FIyMbECKwZPjAlhZJMhBedY0EO8="}

@aws-cdk/aws-ssm
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/ssm/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:ssm:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="ssm" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>ssm</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:ssm:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='ssm', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ssm/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ssm@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ssm": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ssm@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ssm/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ssm@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ssm": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ssm@0.8.1



.. mdinclude:: ./__aws-cdk_aws-ssm.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-ssm

ParameterType
^^^^^^^^^^^^^

.. py:class:: ParameterType([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.ParameterType;

      .. code-tab:: javascript

         const { ParameterType } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { ParameterType } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ParameterValue
^^^^^^^^^^^^^^

.. py:class:: ParameterValue([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.ParameterValue;

      .. code-tab:: javascript

         const { ParameterValue } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { ParameterValue } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-ssm.cloudformation

AssociationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: AssociationResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.AssociationResource;

      .. code-tab:: javascript

         const { cloudformation.AssociationResource } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { cloudformation.AssociationResource } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AssociationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AssociationResource``
   :type properties: :py:class:`~@aws-cdk/aws-ssm.cloudformation.AssociationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: InstanceAssociationOutputLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.AssociationResource.InstanceAssociationOutputLocationProperty;

         .. code-tab:: javascript

            // cloudformation.AssociationResource.InstanceAssociationOutputLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AssociationResource.InstanceAssociationOutputLocationProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: s3Location

         ``AssociationResource.InstanceAssociationOutputLocationProperty.S3Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-instanceassociationoutputlocation.html#cfn-ssm-association-instanceassociationoutputlocation-s3location


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.AssociationResource.S3OutputLocationProperty` or undefined


   .. py:class:: ParameterValuesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.AssociationResource.ParameterValuesProperty;

         .. code-tab:: javascript

            // cloudformation.AssociationResource.ParameterValuesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AssociationResource.ParameterValuesProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: parameterValues

         ``AssociationResource.ParameterValuesProperty.ParameterValues``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-parametervalues.html#cfn-ssm-association-parametervalues-parametervalues


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: S3OutputLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.AssociationResource.S3OutputLocationProperty;

         .. code-tab:: javascript

            // cloudformation.AssociationResource.S3OutputLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AssociationResource.S3OutputLocationProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: outputS3BucketName

         ``AssociationResource.S3OutputLocationProperty.OutputS3BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-s3outputlocation.html#cfn-ssm-association-s3outputlocation-outputs3bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: outputS3KeyPrefix

         ``AssociationResource.S3OutputLocationProperty.OutputS3KeyPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-s3outputlocation.html#cfn-ssm-association-s3outputlocation-outputs3keyprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.AssociationResource.TargetProperty;

         .. code-tab:: javascript

            // cloudformation.AssociationResource.TargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AssociationResource.TargetProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: key

         ``AssociationResource.TargetProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-target.html#cfn-ssm-association-target-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: values

         ``AssociationResource.TargetProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-association-target.html#cfn-ssm-association-target-values


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`



AssociationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AssociationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.AssociationResourceProps;

      .. code-tab:: javascript

         // cloudformation.AssociationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AssociationResourceProps } from '@aws-cdk/aws-ssm';





   .. py:attribute:: documentName

      ``AWS::SSM::Association.DocumentName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: associationName

      ``AWS::SSM::Association.AssociationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-associationname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: documentVersion

      ``AWS::SSM::Association.DocumentVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-documentversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: instanceId

      ``AWS::SSM::Association.InstanceId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-instanceid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: outputLocation

      ``AWS::SSM::Association.OutputLocation``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-outputlocation


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.AssociationResource.InstanceAssociationOutputLocationProperty` or undefined


   .. py:attribute:: parameters

      ``AWS::SSM::Association.Parameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-parameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.AssociationResource.ParameterValuesProperty` or undefined


   .. py:attribute:: scheduleExpression

      ``AWS::SSM::Association.ScheduleExpression``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-scheduleexpression


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: targets

      ``AWS::SSM::Association.Targets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-association.html#cfn-ssm-association-targets


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.AssociationResource.TargetProperty` or undefined


DocumentResource
~~~~~~~~~~~~~~~~

.. py:class:: DocumentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.DocumentResource;

      .. code-tab:: javascript

         const { cloudformation.DocumentResource } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { cloudformation.DocumentResource } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DocumentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DocumentResource``
   :type properties: :py:class:`~@aws-cdk/aws-ssm.cloudformation.DocumentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


DocumentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DocumentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.DocumentResourceProps;

      .. code-tab:: javascript

         // cloudformation.DocumentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.DocumentResourceProps } from '@aws-cdk/aws-ssm';





   .. py:attribute:: content

      ``AWS::SSM::Document.Content``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-document.html#cfn-ssm-document-content


      :type: json or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: documentType

      ``AWS::SSM::Document.DocumentType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-document.html#cfn-ssm-document-documenttype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::SSM::Document.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-document.html#cfn-ssm-document-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


MaintenanceWindowTaskResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MaintenanceWindowTaskResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource;

      .. code-tab:: javascript

         const { cloudformation.MaintenanceWindowTaskResource } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { cloudformation.MaintenanceWindowTaskResource } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MaintenanceWindowTaskResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MaintenanceWindowTaskResource``
   :type properties: :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: LoggingInfoProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.LoggingInfoProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.LoggingInfoProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.LoggingInfoProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: region

         ``MaintenanceWindowTaskResource.LoggingInfoProperty.Region``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-logginginfo.html#cfn-ssm-maintenancewindowtask-logginginfo-region


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3Bucket

         ``MaintenanceWindowTaskResource.LoggingInfoProperty.S3Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-logginginfo.html#cfn-ssm-maintenancewindowtask-logginginfo-s3bucket


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3Prefix

         ``MaintenanceWindowTaskResource.LoggingInfoProperty.S3Prefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-logginginfo.html#cfn-ssm-maintenancewindowtask-logginginfo-s3prefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MaintenanceWindowAutomationParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: documentVersion

         ``MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty.DocumentVersion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowautomationparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowautomationparameters-documentversion


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowautomationparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowautomationparameters-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MaintenanceWindowLambdaParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: clientContext

         ``MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty.ClientContext``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowlambdaparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowlambdaparameters-clientcontext


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: payload

         ``MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty.Payload``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowlambdaparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowlambdaparameters-payload


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: qualifier

         ``MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty.Qualifier``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowlambdaparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowlambdaparameters-qualifier


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MaintenanceWindowRunCommandParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: comment

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-comment


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: documentHash

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.DocumentHash``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-documenthash


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: documentHashType

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.DocumentHashType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-documenthashtype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: notificationConfig

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.NotificationConfig``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-notificationconfig


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.NotificationConfigProperty` or undefined


      .. py:attribute:: outputS3BucketName

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.OutputS3BucketName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-outputs3bucketname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: outputS3KeyPrefix

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.OutputS3KeyPrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-outputs3keyprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serviceRoleArn

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.ServiceRoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-servicerolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: timeoutSeconds

         ``MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty.TimeoutSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowruncommandparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowruncommandparameters-timeoutseconds


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MaintenanceWindowStepFunctionsParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: input

         ``MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty.Input``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowstepfunctionsparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowstepfunctionsparameters-input


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-maintenancewindowstepfunctionsparameters.html#cfn-ssm-maintenancewindowtask-maintenancewindowstepfunctionsparameters-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: NotificationConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.NotificationConfigProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.NotificationConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.NotificationConfigProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: notificationArn

         ``MaintenanceWindowTaskResource.NotificationConfigProperty.NotificationArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-notificationconfig.html#cfn-ssm-maintenancewindowtask-notificationconfig-notificationarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: notificationEvents

         ``MaintenanceWindowTaskResource.NotificationConfigProperty.NotificationEvents``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-notificationconfig.html#cfn-ssm-maintenancewindowtask-notificationconfig-notificationevents


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: notificationType

         ``MaintenanceWindowTaskResource.NotificationConfigProperty.NotificationType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-notificationconfig.html#cfn-ssm-maintenancewindowtask-notificationconfig-notificationtype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.TargetProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.TargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.TargetProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: key

         ``MaintenanceWindowTaskResource.TargetProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-target.html#cfn-ssm-maintenancewindowtask-target-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: values

         ``MaintenanceWindowTaskResource.TargetProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-target.html#cfn-ssm-maintenancewindowtask-target-values


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TaskInvocationParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResource.TaskInvocationParametersProperty;

         .. code-tab:: javascript

            // cloudformation.MaintenanceWindowTaskResource.TaskInvocationParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.MaintenanceWindowTaskResource.TaskInvocationParametersProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: maintenanceWindowAutomationParameters

         ``MaintenanceWindowTaskResource.TaskInvocationParametersProperty.MaintenanceWindowAutomationParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-taskinvocationparameters.html#cfn-ssm-maintenancewindowtask-taskinvocationparameters-maintenancewindowautomationparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowAutomationParametersProperty` or undefined


      .. py:attribute:: maintenanceWindowLambdaParameters

         ``MaintenanceWindowTaskResource.TaskInvocationParametersProperty.MaintenanceWindowLambdaParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-taskinvocationparameters.html#cfn-ssm-maintenancewindowtask-taskinvocationparameters-maintenancewindowlambdaparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowLambdaParametersProperty` or undefined


      .. py:attribute:: maintenanceWindowRunCommandParameters

         ``MaintenanceWindowTaskResource.TaskInvocationParametersProperty.MaintenanceWindowRunCommandParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-taskinvocationparameters.html#cfn-ssm-maintenancewindowtask-taskinvocationparameters-maintenancewindowruncommandparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowRunCommandParametersProperty` or undefined


      .. py:attribute:: maintenanceWindowStepFunctionsParameters

         ``MaintenanceWindowTaskResource.TaskInvocationParametersProperty.MaintenanceWindowStepFunctionsParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-maintenancewindowtask-taskinvocationparameters.html#cfn-ssm-maintenancewindowtask-taskinvocationparameters-maintenancewindowstepfunctionsparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.MaintenanceWindowStepFunctionsParametersProperty` or undefined



MaintenanceWindowTaskResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MaintenanceWindowTaskResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.MaintenanceWindowTaskResourceProps;

      .. code-tab:: javascript

         // cloudformation.MaintenanceWindowTaskResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.MaintenanceWindowTaskResourceProps } from '@aws-cdk/aws-ssm';





   .. py:attribute:: maxConcurrency

      ``AWS::SSM::MaintenanceWindowTask.MaxConcurrency``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-maxconcurrency


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: maxErrors

      ``AWS::SSM::MaintenanceWindowTask.MaxErrors``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-maxerrors


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: priority

      ``AWS::SSM::MaintenanceWindowTask.Priority``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-priority


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serviceRoleArn

      ``AWS::SSM::MaintenanceWindowTask.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: targets

      ``AWS::SSM::MaintenanceWindowTask.Targets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-targets


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.TargetProperty`


   .. py:attribute:: taskArn

      ``AWS::SSM::MaintenanceWindowTask.TaskArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-taskarn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: taskType

      ``AWS::SSM::MaintenanceWindowTask.TaskType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-tasktype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::SSM::MaintenanceWindowTask.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: loggingInfo

      ``AWS::SSM::MaintenanceWindowTask.LoggingInfo``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-logginginfo


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.LoggingInfoProperty` or undefined


   .. py:attribute:: maintenanceWindowTaskName

      ``AWS::SSM::MaintenanceWindowTask.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: taskInvocationParameters

      ``AWS::SSM::MaintenanceWindowTask.TaskInvocationParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-taskinvocationparameters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.MaintenanceWindowTaskResource.TaskInvocationParametersProperty` or undefined


   .. py:attribute:: taskParameters

      ``AWS::SSM::MaintenanceWindowTask.TaskParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-taskparameters


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: windowId

      ``AWS::SSM::MaintenanceWindowTask.WindowId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-maintenancewindowtask.html#cfn-ssm-maintenancewindowtask-windowid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ParameterResource
~~~~~~~~~~~~~~~~~

.. py:class:: ParameterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.ParameterResource;

      .. code-tab:: javascript

         const { cloudformation.ParameterResource } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { cloudformation.ParameterResource } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ParameterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ParameterResource``
   :type properties: :py:class:`~@aws-cdk/aws-ssm.cloudformation.ParameterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: parameterType

      :type: :py:class:`~@aws-cdk/aws-ssm.ParameterType` *(readonly)*


   .. py:attribute:: parameterValue

      :type: :py:class:`~@aws-cdk/aws-ssm.ParameterValue` *(readonly)*


ParameterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ParameterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.ParameterResourceProps;

      .. code-tab:: javascript

         // cloudformation.ParameterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ParameterResourceProps } from '@aws-cdk/aws-ssm';





   .. py:attribute:: type

      ``AWS::SSM::Parameter.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-parameter.html#cfn-ssm-parameter-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: value

      ``AWS::SSM::Parameter.Value``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-parameter.html#cfn-ssm-parameter-value


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allowedPattern

      ``AWS::SSM::Parameter.AllowedPattern``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-parameter.html#cfn-ssm-parameter-allowedpattern


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::SSM::Parameter.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-parameter.html#cfn-ssm-parameter-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: parameterName

      ``AWS::SSM::Parameter.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-parameter.html#cfn-ssm-parameter-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PatchBaselineResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PatchBaselineResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource;

      .. code-tab:: javascript

         const { cloudformation.PatchBaselineResource } = require('@aws-cdk/aws-ssm');

      .. code-tab:: typescript

         import { cloudformation.PatchBaselineResource } from '@aws-cdk/aws-ssm';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PatchBaselineResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PatchBaselineResource``
   :type properties: :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: PatchFilterGroupProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource.PatchFilterGroupProperty;

         .. code-tab:: javascript

            // cloudformation.PatchBaselineResource.PatchFilterGroupProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PatchBaselineResource.PatchFilterGroupProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: patchFilters

         ``PatchBaselineResource.PatchFilterGroupProperty.PatchFilters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchfiltergroup.html#cfn-ssm-patchbaseline-patchfiltergroup-patchfilters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.PatchFilterProperty` or undefined


   .. py:class:: PatchFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource.PatchFilterProperty;

         .. code-tab:: javascript

            // cloudformation.PatchBaselineResource.PatchFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PatchBaselineResource.PatchFilterProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: key

         ``PatchBaselineResource.PatchFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchfilter.html#cfn-ssm-patchbaseline-patchfilter-key


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: values

         ``PatchBaselineResource.PatchFilterProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchfilter.html#cfn-ssm-patchbaseline-patchfilter-values


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PatchSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource.PatchSourceProperty;

         .. code-tab:: javascript

            // cloudformation.PatchBaselineResource.PatchSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PatchBaselineResource.PatchSourceProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: configuration

         ``PatchBaselineResource.PatchSourceProperty.Configuration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchsource.html#cfn-ssm-patchbaseline-patchsource-configuration


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``PatchBaselineResource.PatchSourceProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchsource.html#cfn-ssm-patchbaseline-patchsource-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: products

         ``PatchBaselineResource.PatchSourceProperty.Products``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-patchsource.html#cfn-ssm-patchbaseline-patchsource-products


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: RuleGroupProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource.RuleGroupProperty;

         .. code-tab:: javascript

            // cloudformation.PatchBaselineResource.RuleGroupProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PatchBaselineResource.RuleGroupProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: patchRules

         ``PatchBaselineResource.RuleGroupProperty.PatchRules``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-rulegroup.html#cfn-ssm-patchbaseline-rulegroup-patchrules


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.RuleProperty` or undefined


   .. py:class:: RuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResource.RuleProperty;

         .. code-tab:: javascript

            // cloudformation.PatchBaselineResource.RuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PatchBaselineResource.RuleProperty } from '@aws-cdk/aws-ssm';





      .. py:attribute:: approveAfterDays

         ``PatchBaselineResource.RuleProperty.ApproveAfterDays``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-rule.html#cfn-ssm-patchbaseline-rule-approveafterdays


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: complianceLevel

         ``PatchBaselineResource.RuleProperty.ComplianceLevel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-rule.html#cfn-ssm-patchbaseline-rule-compliancelevel


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: enableNonSecurity

         ``PatchBaselineResource.RuleProperty.EnableNonSecurity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-rule.html#cfn-ssm-patchbaseline-rule-enablenonsecurity


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: patchFilterGroup

         ``PatchBaselineResource.RuleProperty.PatchFilterGroup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ssm-patchbaseline-rule.html#cfn-ssm-patchbaseline-rule-patchfiltergroup


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.PatchFilterGroupProperty` or undefined



PatchBaselineResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PatchBaselineResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ssm.cloudformation.PatchBaselineResourceProps;

      .. code-tab:: javascript

         // cloudformation.PatchBaselineResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PatchBaselineResourceProps } from '@aws-cdk/aws-ssm';





   .. py:attribute:: patchBaselineName

      ``AWS::SSM::PatchBaseline.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: approvalRules

      ``AWS::SSM::PatchBaseline.ApprovalRules``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-approvalrules


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.RuleGroupProperty` or undefined


   .. py:attribute:: approvedPatches

      ``AWS::SSM::PatchBaseline.ApprovedPatches``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-approvedpatches


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: approvedPatchesComplianceLevel

      ``AWS::SSM::PatchBaseline.ApprovedPatchesComplianceLevel``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-approvedpatchescompliancelevel


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: approvedPatchesEnableNonSecurity

      ``AWS::SSM::PatchBaseline.ApprovedPatchesEnableNonSecurity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-approvedpatchesenablenonsecurity


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::SSM::PatchBaseline.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: globalFilters

      ``AWS::SSM::PatchBaseline.GlobalFilters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-globalfilters


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.PatchFilterGroupProperty` or undefined


   .. py:attribute:: operatingSystem

      ``AWS::SSM::PatchBaseline.OperatingSystem``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-operatingsystem


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: patchGroups

      ``AWS::SSM::PatchBaseline.PatchGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-patchgroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: rejectedPatches

      ``AWS::SSM::PatchBaseline.RejectedPatches``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-rejectedpatches


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sources

      ``AWS::SSM::PatchBaseline.Sources``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ssm-patchbaseline.html#cfn-ssm-patchbaseline-sources


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ssm.cloudformation.PatchBaselineResource.PatchSourceProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-ssm

